Jun 26, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxbios.c: Fixed bcopy() (FF9 battle crash with HLE BIOS - my
   mistake :( ).
 * libpcsxcore/misc.c: Added check for HLE BIOS in savestate, bumped savestate
   version, don't byteswap savestate version as part of savestate data is not
   endianness clean.

Jun 24, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/spu.c: Reset lastch to -1 in SPUinit().
 * plugins/dfsound/psemu.c: Removed support for obsoleted ancient API.
 * plugins/dfsound/Makefile.am: Removed psemu.c.
 * macosx/plugins/DFSound/PeopsSPU.xcodeproj/project.pbxproj: Likewise.

Jun 23, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/sio.c: Convert more ASCII characters to half-width.

Jun 21, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxbios.c: Use a separate flag to identify whether we are
   inside a softcall or not, as ra might be modified inside the interrupt
   handler.
 * libpcsxcore/psxbios.h: Likewise.
 * libpcsxcore/psxcommon.c: Likewise.
 * plugins/dfsound/spu.c: Moved initialization routine from SPUopen() into
   SPUinit().
 * plugins/dfsound/freeze.c: Save spuAddr as well.
 * po/Makefile.in.in: Silenced warning.

Jun 20, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/freeze.c: Reset lastch when loading state, which fixes
   occasionally crash after state loading.
 * plugins/dfsound/spu.c: Likewise.

Jun 19, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/PcsxController.m: Do not simulate CD case open if user clicked
   Cancel in switch ISO dialog.

Jun 16, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/psxcommon.c: Do not allow hotkeys inside a softcall from HLE
   BIOS.
 * configure.ac: Removed -fno-dse, which is no longer necessary.

Jun 9, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * win32/pcsx.rc: Embed manifest properly under MSVC6.

Jun 8, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
